React使用详解.md: 解决 release android 编译时容易出现的 `Out of Memory Error` 问题